--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 
+spring.jpa.hibernate.dll-auto=none
+srping.datasource.driver.class-name=com.postgresql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+spring.messages.encoding=UTF-8
+logging.level.root=INFO
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=ERROR
+
+spring.datasource.url=
+spring.datasource.username=postgres
+spring.datasource.password=postgres
